force-app/main/default/objects/BOM_with_Spare_Part__c.object
<CustomObject>
    <fields>
        <fullName>BOMNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BOMNo</label>
        <referenceTo>BOM__c</referenceTo>
        <relationshipLabel>BOM with Spare Part</relationshipLabel>
        <relationshipName>BOM_with_Spare_Part</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bomWithSparePartKey__c</fullName>
        <externalId>true</externalId>
        <label>bomWithSparePartKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>item__c</fullName>
        <label>item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <label>quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sparePartNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>sparePartNo</label>
        <referenceTo>Spare_Part__c</referenceTo>
        <relationshipLabel>BOM with Spare Part</relationshipLabel>
        <relationshipName>BOM_with_Spare_Part</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <label>unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>validFrom__c</fullName>
        <label>validFrom</label>
        <type>Date</type>
    </fields>
    <label>BOM with Spare Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BOMNo__c</columns>
        <columns>bomWithSparePartKey__c</columns>
        <columns>item__c</columns>
        <columns>sparePartNo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>BOM with Spare Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>